Fix bug on firefox, bigger maximum font size

--- a/style.css
+++ b/style.css
@@ -44,8 +44,10 @@ body {
   display: inline-block;
   padding: 1em 0;
   width: 100%;
+  height: 100%;
   height: -webkit-fill-available;
   height:    -moz-fill-available;
+  height:         -moz-available;
   height:         fill-available;
   min-height: 100%;
   outline: none;
